fix tabs on small screen

--- a/src/App.scss
+++ b/src/App.scss
@@ -12,7 +12,7 @@
 
 .app__tab {
     font-family: sans-serif;
-    margin: 0 0 0 10px;
+    margin: 5px 0 0 5px;
 }
 
 .app__tab-button {
@@ -36,7 +36,6 @@
 
 .app__tab-list {
     flex-grow: 1;
-    max-height: 36px;
     background: #efefef;
     margin: 0 0 0 0;
 
@@ -44,10 +43,10 @@
         content: '';
         position: absolute;
         display: block;
-        top: 36px;
         width: 100%;
         height: 4px;
         background: linear-gradient(to bottom, #fff, transparent);
+        transform: translate(0px, 1px);
         z-index: 1;
     }
 }
